<resources>
    <string name="app_name">thefirststep</string>
    <string name="status">Status</string>
    <string name="history">History</string>
    <string name="submit">Submit</string>
    <string name="prosthetic_type">Prosthetic Type</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="enter_beneficiary_s_details">Enter Beneficiary\'s Details</string>
    <string name="refresh">Refresh</string>
    <string name="new_beneficiary">New Beneficiary</string>
    <string name="add_new_beneficiary">Add New Beneficiary</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beneficiary_contact">Beneficiary Contact</string>
    <string name="key_numeric">Key (numeric)</string>
    <string name="share_app">Share App</string>
    <string name="the_firststep">The FirstStep</string>
    <string name="exit">Exit</string>
    <string name="beneficiaries_list">beneficiaries List</string>
    <string name="developed_by_the_one_developers">Developed by The-One Developers</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="side_of_amputation">Side Of Amputation:</string>
    <string name="level_of_amputation">Level Of Amputation</string>
    <string name="upload_image">Upload Image</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="year_of_amputation">Year Of Amputation</string>
    <string name="contact_of_next_of_kin">Contact Of Next Of Kin</string>
    <string name="name_of_next_of_kin">Name Of Next Of Kin</string>
    <string name="address">Address</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="download_pdf">Download PDF</string>
    <string name="search">Search</string>
    <string name="birthdate">Birthdate</string>
    <string name="name_n_o_k">Name \'N.O.K\':</string>
    <string name="contact_n_o_k">Contact \'N.O.K\':</string>
    <string name="side_of_amput">Side Of Amput:</string>
    <string name="level_of_amput">Level Of Amput:</string>
    <string name="year_of_amput">Year Of Amput:</string>
    <string name="picture">Picture</string>
    <string name="_2025_the_one_developers">© 2025 The-One Developers</string>
    <string-array name="SpinnerStatus">
        <item>New</item>
        <item>Returning</item>
    </string-array>
    <string-array name="levelOfAmputation">
        <item>Below Elbow</item>
        <item>Above Elbow</item>
        <item>Shoulder</item>
    </string-array>
    <string-array name="sideOfAmputation">
        <item>Left</item>
        <item>Right</item>
        <item>Bilateral</item>
    </string-array>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>